# moderator

./: .gitignore  CLAUDE.md  README.md  archetcture.md  main.py  moderator-prd.md  plan.md  pyproject.toml  pytest.ini  requirements.txt  test_claude_spawn.py
.claude/: settings.local.json
TO_BE_DELETED/: README.md  agents.yaml
bmad-docs/: bmm-workflow-status.md  bmm-workflow-status.yaml  epic-7-terminal-dashboard-architecture.md  epics.md  phase-1.5-completion-report.md  sprint-status.yaml  tech-spec-epic-3.md
config/: config.yaml  production_ccpm_config.yaml  production_claude_config.yaml  production_config.yaml  test_config.yaml
docs/: ai-agent-opportunities-analysis.md  alerts-setup.md  dashboard-manual-verification.md  moderator-prd.md  plan_2.md  qa-setup.md
moderator/: __init__.py  cli.py  execution_router.py  models.py  orchestrator.py
scripts/: validate_gear2_migration.py  validate_gear2_week1b.py  validate_story_7_1.py
src/: backend.py  config_loader.py  config_validator.py  decomposer.py  executor.py  git_manager.py  improvement_engine.py  logger.py  models.py  orchestrator.py  pr_reviewer.py  state_manager.py
tests/: __init__.py  conftest.py  test_alerts_panel.py  test_anomaly_detector.py  test_architecture_analyzer.py  test_backend_router.py  test_backends.py  test_bandit_adapter.py  test_base_panel.py  test_cli.py  test_code_quality_analyzer.py  test_components_panel.py  test_config_loader.py  test_config_validator.py  test_dashboard_app.py  test_dashboard_config.py  test_decomposer.py  test_documentation_analyzer.py  test_ever_thinker_agent.py  (+40 more)
(+341 files in other folders)
